[tool.poetry]
name = "recursive-programming-python"
version = "0.1.0"
description = ""
authors = ["Alexander Vasilyev <melsior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wemake-python-styleguide = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
